fix(docs/dark): fix dark mode problems

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -4,7 +4,7 @@ body.body--dark
   color: $dark-text-color
   background: $darker-background
 
-  .q-page-container img 
+  .q-page-container img
     background-color: $grey-dark-background
     padding: 2px
     border-radius: 4px
@@ -17,7 +17,7 @@ body.body--dark
 
   .q-item--dark
     color: $dark-text-color !important
-  
+
   .q-toolbar .q-btn
     color: $dark-text-color
 
@@ -42,7 +42,7 @@ body.body--dark
 
   .doc-note--warning
     background-color: #d6d590
-   
+
   .doc-note--danger
     background-color: #dbacac
 
@@ -86,15 +86,15 @@ body.body--dark
   .api-row__example
     background-color: #004564
 
-  #flex-playground
+  .flex-playground
     background: $darker-background !important
 
-  #flex-playground--content
-    background: $darker-background
+  .flex-playground--content
+    background: $darker-background !important
 
   .q-badge--single-line
     background: #5b667c
-  
+
 .text-brand-primary
   color: #b8b8b8
 .bg-brand-primary
@@ -264,7 +264,7 @@ body.q-scroll--lock .q-page
     overflow-anchor: auto
 
 // makes the scroll bar look better for the drop-down menus in the header
-::-webkit-scrollbar 
+::-webkit-scrollbar
   height: 12px
   width: 14px
   background: transparent
@@ -272,7 +272,7 @@ body.q-scroll--lock .q-page
   overflow: visible
 
 
-::-webkit-scrollbar-thumb 
+::-webkit-scrollbar-thumb
   width: 10px
   background-color: #c1c1c1
   border-radius: 10px
@@ -285,5 +285,5 @@ body.q-scroll--lock .q-page
   min-width: 32px
 
 
-::-webkit-scrollbar-thumb:hover 
+::-webkit-scrollbar-thumb:hover
   background: #c1c1c1
